fixed word wrap, updated readme

--- a/recipebook/style.css
+++ b/recipebook/style.css
@@ -56,7 +56,7 @@
 .ingredients {
     padding:20px 10px 0px;
 }
-a {
+.wrapp {
     word-wrap: break-word;
 }
 
